Edit In Content

--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,8 +1,8 @@
 <div class="footer-parent" id="footer">
     <div class="content container text-center text-md-start">
       <a href="#home"><h1>Gerges Farag</h1></a>
-      <p>&copy; 2023 Gerges Farag. All rights reserved.</p>
-      <div class="social-media">
+      <p>&copy; 2025 Gerges Farag. All rights reserved.</p>
+      <div class="social-media my-3">
         <a href="https://www.linkedin.com/in/gerges-farag/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/GergesFarag" target="_blank"><i class="fa-brands fa-github"></i></a>
         <a href="https://www.facebook.com/geregs1farag" target="_blank"><i class="fa-brands fa-facebook"></i></a>
