--- a/src/components/project/project.component.css
+++ b/src/components/project/project.component.css
@@ -16,16 +16,16 @@
     object-fit: cover;
   }
   
-  .data:hover img {
+  .project:hover img {
     transform: scale(1.3) rotateZ(25deg);
     opacity: 0.2;
   }
   
-  .data:hover {
+  .project:hover .data {
     box-shadow: 0px 0px 1.25rem var(--main-color);
   }
   
-  .data:hover .title {
+  .project:hover .title {
     opacity: 1;
   }
   
