--- a/src/components/landing/landing.component.html
+++ b/src/components/landing/landing.component.html
@@ -4,7 +4,7 @@
     <div class="left-content col-12 col-md-6 text-center px-3">
       <h3>Full-stack Web Developer</h3>
       <h1>Gerges <br><span>Farag</span></h1>
-      <p>I am a Fullstack Web Developer and Computer Science Student at ASU</p>
+      <p>Fullstack Web Developer and Computer Science Student at ASU</p>
     </div>
     <div class="right-content col-12 col-md-6 position-relative d-flex justify-content-center align-items-center">
       <img src="person.png" alt="Gerges" class="person-img position-absolute" />
