--- a/src/components/about/about.component.html
+++ b/src/components/about/about.component.html
@@ -1,24 +1,36 @@
 <div class="about-parent section" id="about">
-    <div class="content container d-flex flex-column flex-md-row align-items-center justify-content-evenly py-5">
-      <div class="left-content col-12 col-md-6 text-center">
-        <div class="img-cont mx-auto">
-          <img src="about-img.jpg" alt="About Me" class="img-fluid" loading="lazy" />
-        </div>
+  <div
+    class="content container d-flex flex-column flex-md-row align-items-center justify-content-evenly py-5"
+  >
+    <div class="left-content col-12 col-md-6 text-center">
+      <div class="img-cont mx-auto">
+        <img
+          src="about-img.jpg"
+          alt="About Me"
+          class="img-fluid"
+          loading="lazy"
+        />
       </div>
-      <div class="right-content col-12 col-md-6">
-        <div class="floating-content">
-          <h1>About <br />me</h1>
-          <i class="fa-solid fa-arrow-right"></i>
-        </div>
-        <div class="static-content mb-5">
-          <p>
-            I'm a freelance web developer and graphic designer. I've been working remotely for the last few years, focusing primarily on creating engaging and user-friendly websites. My passion for technology has led me to explore various industries, from marketing to software development.
-          </p>
-          <a href="#hire">
-            <button class="mt-3">Hire Me</button>
-          </a>
-        </div>
+    </div>
+    <div class="right-content col-12 col-md-6">
+      <div class="floating-content">
+        <h1>About <br />me</h1>
+        <i class="fa-solid fa-arrow-right"></i>
+      </div>
+      <div class="static-content mb-5">
+        <p>
+          Passionate and dedicated Computer Science student specializing in
+          Full-Stack Web Development with a strong focus on the MEAN (MongoDB,
+          Express.js, Angular, Node.js) stack. Demonstrates proficiency in
+          modern web technologies, software engineering principles, and a
+          commitment to building dynamic, responsive, and scalable applications.
+          Adept at collaborating within teams and continuously enhancing
+          technical skills to deliver high-quality solutions
+        </p>
+        <a href="#hire">
+          <button class="mt-3">Hire Me</button>
+        </a>
       </div>
     </div>
   </div>
-  
+</div>
