--- a/src/components/landing/landing.component.html
+++ b/src/components/landing/landing.component.html
@@ -11,7 +11,7 @@
       <a href="https://media.licdn.com/dms/document/media/v2/D4D2DAQEWA1GlDqRH0w/profile-treasury-document-pdf-analyzed/profile-treasury-document-pdf-analyzed/0/1733948402888?e=1738800000&v=beta&t=kP-cprolZKjBti5dpwEarRzCVWS91NTymY3JEoIM42Y" target="_blank">
         <button type="button" class="cv-button">
           <i class="fa-solid fa-download fs-3"></i><br />
-          Download CV
+          Download <br> CV
         </button>
       </a>
     </div>
